# rusic

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  com.temidaradev.rusic.json  flake.nix  install.sh
.github/workflows/: release.yml
assets/: main.css  tailwind.css
cache/: config.json  library.json
components/: Cargo.toml
components/src/: lib.rs  playlist_modal.rs  search_bar.rs  settings_items.rs  settings_popups.rs
config/: Cargo.toml
config/src/: lib.rs
data/: com.temidaradev.rusic.desktop  com.temidaradev.rusic.metainfo.xml  rusic-wrapper.sh
discord-presence/: Cargo.toml
hooks/: Cargo.toml
hooks/src/: use_player_task.rs
nix/: package.nix
pages/: Cargo.toml
pages/src/: album.rs  home.rs  library.rs  logs.rs  settings.rs
player/: Cargo.toml
player/src/: player.rs
player/src/systemint/: linux.rs  mod.rs
reader/src/: models.rs
rusic/: Cargo.toml
rusic/assets/: main.css  themes.css
rusic/src/: main.rs
scrobble/: Cargo.toml
scrobble/src/: musicbrainz.rs
server/: Cargo.toml
server/src/: jellyfin.rs
src/: config.rs  main.rs
src/components/: album_details.rs  bottombar.rs  fullscreen.rs  mod.rs  playlist_detail.rs  sidebar.rs
src/hooks/: use_player_controller.rs
src/pages/: home.rs  library.rs  mod.rs  playlists.rs  search.rs  settings.rs
src/player/: player.rs
src/reader/: mod.rs  models.rs
utils/src/: stream_buffer.rs
