[package]
name = "rusic"
version = "0.1.0"
authors = ["temidaradev <temidaradev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.3", features = [] }
multitag = "0.4.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
